feat: create sleep graphQL query and swagger docs
